--- a/html/login.html
+++ b/html/login.html
@@ -7,9 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/uiSet.css">
-    <link rel="stylesheet" href="assets/css/login.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    @@include('layout/header.html')
     <!-- 登入註冊區 -->
     <section class="loginArea aidBgColor">
         <!-- 切換顯示用input display:none -->
@@ -45,5 +46,6 @@
             </article>
         </article>
     </section>
+    @@include('layout/footer.html')
 </body>
 </html>
