修改 商品頁面css

--- a/html/productSingle.html
+++ b/html/productSingle.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品單頁</title>
-    <link rel="stylesheet" href="css/productItem.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/uiSet.css">
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/uiSet.css">
+    <link rel="stylesheet" href="assets/css/productSingle.css">
 </head>
 <body>
 <!-- 許瑀芹 -->
