--- a/html/prouductAll.html
+++ b/html/prouductAll.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/uiSet.css">
+    <link rel="stylesheet" href="assets/css/productAll.css">
 </head>
 <body>
     <!-- 許瑀芹 -->
