--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
 <body>
     <!-- 關於我們_頁首區域 -->
     
-<link rel="stylesheet" href="../css/reset.css">
-<link rel="stylesheet" href="../css/uiSet.css">
-<link rel="stylesheet" href="../css/header.css">
+<link rel="stylesheet" href="../../asset/css/reset.css">
+<link rel="stylesheet" href="../../asset/css/uiSet.css">
+<link rel="stylesheet" href="../../asset/css/header.css">
 <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="../js/header.js"></script>
@@ -34,7 +34,7 @@
             <section class="logoContain">
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_header_logo.png">
+                        <img src="../../assets/image/home_header_logo.png">
                     </a>
                 </section>
             </section>
@@ -72,12 +72,12 @@
                         <section class="memberList">
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconBell.png">
+                                    <img src="../../assets/image/home_header_iconBell.png">
                                 </a>
                             </section>
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconMember.png">
+                                    <img src="../../assets/image/home_header_iconMember.png">
                                 </a>
                             </section>
                         </section>
@@ -248,9 +248,9 @@
 
     <!-- 關於我們_頁尾區域 -->
     
-<link rel="stylesheet" href="../css/reset.css">
-<link rel="stylesheet" href="../css/uiSet.css">
-<link rel="stylesheet" href="../css/footer.css">
+<link rel="stylesheet" href="../../asset/css/reset.css">
+<link rel="stylesheet" href="../../asset/css/uiSet.css">
+<link rel="stylesheet" href="../../asset/css/footer.css">
 <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="../js/header.js"></script>
@@ -259,28 +259,28 @@
         <section class="footerContain">
             <section class="logoContain">
                 <section class="logo">
-                    <img src="../image/home_header_logo.png">
+                    <img src="../../assets/image/home_header_logo.png">
                 </section>
             </section>
             <section class="socialContain">
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_facebook.png">
+                        <img src="../../assets/image/home_footer_facebook.png">
                     </a>
                 </section>
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_instagram.png">
+                        <img src="../../assets/image/home_footer_instagram.png">
                     </a>
                 </section>
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_twitter.png">
+                        <img src="../../assets/image/home_footer_twitter.png">
                     </a>
                 </section>
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_line.png">
+                        <img src="../../assets/image/home_footer_line.png">
                     </a>
                 </section>
             </section>
