--- a/html/login.html
+++ b/html/login.html
@@ -46,6 +46,6 @@
             </article>
         </article>
     </section>
-    @@include('layout/footer.html')
+    <!-- @@include('layout/footer.html') -->
 </body>
 </html>
