--- a/about.html
+++ b/about.html
@@ -22,19 +22,16 @@
 <body>
     <!-- 關於我們_頁首區域 -->
     
-<link rel="stylesheet" href="../css/reset.css">
-<link rel="stylesheet" href="../css/uiSet.css">
-<link rel="stylesheet" href="../css/header.css">
 <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="../js/header.js"></script>
+<script src="js/header.js"></script>
 
 <header>
         <section class="headerContain">
             <section class="logoContain">
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_header_logo.png">
+                        <img src="assets/image/home_header_logo.png">
                     </a>
                 </section>
             </section>
@@ -72,12 +69,12 @@
                         <section class="memberList">
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconBell.png">
+                                    <img src="assets/image/home_header_iconBell.png">
                                 </a>
                             </section>
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconMember.png">
+                                    <img src="assets/image/home_header_iconMember.png">
                                 </a>
                             </section>
                         </section>
