--- a/html/homePage.html
+++ b/html/homePage.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-	<link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/uiSet.css">
-    <link rel="stylesheet" href="../css/homePage.css">
-    <link rel="stylesheet" href="../css/headerNormal.css">
-    <link rel="stylesheet" href="../css/footer.css">
+	<link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/uiSet.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- <link rel="stylesheet" href="assets/css/headerNormal.css"> -->
+    <!-- <link rel="stylesheet" href="assets/css/footer.css"> -->
     <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="../js/header.js"></script>
+    <script src="js/header.js"></script>
 </head>
 <body>   
     <header>
@@ -20,7 +20,7 @@
             <section class="logoContain">
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_header_logo.png">
+                        <img src="assets/image/home_header_logo.png">
                     </a>
                 </section>
             </section>
@@ -58,12 +58,12 @@
                         <section class="memberList">
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconBell.png">
+                                    <img src="assets/image/home_header_iconBell.png">
                                 </a>
                             </section>
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconMember.png">
+                                    <img src="assets/image/home_header_iconMember.png">
                                 </a>
                             </section>
                         </section>
@@ -84,13 +84,13 @@
     <section class="homeIntro">
         <section class="intro">
             <section class="pic">
-                <img src="../image/home_homeIntro_suitcase.png" alt="">
+                <img src="assets/image/home_homeIntro_suitcase.png" alt="">
             </section>
             <h1 class="deepColor">不是缺少美，<br>是缺少發現。</h1>  
         </section>
         <section class="scrollMouse">
             <section class="pic">
-                <img src="../image/home_homeIntro_mouse.png" alt="">
+                <img src="assets/image/home_homeIntro_mouse.png" alt="">
             </section>
             <p class="lightColor small">Scroll Down</p>
         </section>
@@ -99,7 +99,7 @@
         <section class="catalog">
            <section class="card sculpture">
                <section class="pic">
-                    <img src="../image/home_homeCatalog_man.png"  alt="">
+                    <img src="assets/image/home_homeCatalog_man.png"  alt="">
                </section>
                <section class="txt">
                     <h2 class="deepColor">雕塑類</h2>
@@ -109,7 +109,7 @@
            </section>
            <section class="card paint">
                 <section class="pic">
-                    <img src="../image/home_homeCatalog_smilePaint.png"  alt="">
+                    <img src="assets/image/home_homeCatalog_smilePaint.png"  alt="">
                 </section>
                 <section class="txt">
                     <h2 class="deepColor">畫作類</h2>
@@ -119,7 +119,7 @@
            </section>
            <section class="card toy">
                 <section class="pic">
-                    <img src="../image/home_homeCatalog_elmoSculpt.png"  alt="">
+                    <img src="assets/image/home_homeCatalog_elmoSculpt.png"  alt="">
                 </section>
                 <section class="txt">
                     <h2 class="deepColor">公仔類</h2>
@@ -129,7 +129,7 @@
            </section>
            <section class="card brame">
                 <section class="pic">
-                    <img src="../image/home_homeCatalog_lavbag.png"  alt="">
+                    <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
                 </section>
                 <section class="txt">
                     <h2 class="deepColor">品牌合作</h2>
@@ -141,18 +141,18 @@
     </section>
     <section class="homeGallery">
         <section class="scrollPic">
-            <img src="../image/home_homeCatalog_lavbag.png"  alt="">
+            <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
         </section>
         <section class="pic">
-            <img src="../image/home_homGallery_gallery.jpeg" alt="">
+            <img src="assets/image/home_homGallery_gallery.jpeg" alt="">
         </section>
     </section>
    <section class="homeMember">
         <section class="scrollPic">
-            <img src="../image/home_homeCatalog_lavbag.png"  alt="">
+            <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
         </section>
         <section class="pic">
-            <img src="../image/home_homeMember_room.png" alt="">
+            <img src="assets/image/home_homeMember_room.png" alt="">
         </section>
     </section>
     <section class="homeNews">
@@ -160,7 +160,7 @@
             <h2 class="deepColor">藝論</h2>
             <article class="item">
                 <section class="pic">
-                    <img src="../image/home_homeNews_author.jpg" alt="">
+                    <img src="assets/image/home_homeNews_author.jpg" alt="">
                 </section>
                 <section class="content">
                     <section class="txt">
@@ -174,47 +174,47 @@
             </article>
         </section>
         <section class="zigzag">
-            <img src="../image/home_homeNews_zigzag.png" alt="">
+            <img src="assets/image/home_homeNews_zigzag.png" alt="">
         </section>
         <section class="decorate Pictopleft">
-            <img src="../image/home_homeCatalog_elmoSculpt.png" alt="">
+            <img src="assets/image/home_homeCatalog_elmoSculpt.png" alt="">
         </section>
         <section class="decorate Pictopright">
-            <img src="../image/galley__KAWSxUniqloTshirt.png" alt="">
+            <img src="assets/image/galley__KAWSxUniqloTshirt.png" alt="">
         </section>
         <section class="decorate Picbottomleft">
-            <img src="../image/home_homeCatalog_man.png" alt="">
+            <img src="assets/image/home_homeCatalog_man.png" alt="">
         </section>
         <section class="decorate Picbottomright">
-            <img src="../image/galley__lavKoonsbag.png" alt="">
+            <img src="assets/image/galley__lavKoonsbag.png" alt="">
         </section>
     </section>
     <footer>
         <section class="footerContain">
             <section class="logoContain">
                 <section class="logo">
-                    <img src="../image/home_header_logo.png">
+                    <img src="assets/image/home_header_logo.png">
                 </section>
             </section>
             <section class="socialContain">
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_facebook.png">
+                        <img src="assets/image/home_footer_facebook.png">
                     </a>
                 </section>
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_instagram.png">
+                        <img src="assets/image/home_footer_instagram.png">
                     </a>
                 </section>
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_twitter.png">
+                        <img src="assets/image/home_footer_twitter.png">
                     </a>
                 </section>
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_line.png">
+                        <img src="assets/image/home_footer_line.png">
                     </a>
                 </section>
             </section>
@@ -244,6 +244,6 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script src="../js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
