--- a/html/prouductAll.html
+++ b/html/prouductAll.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品頁</title>
-    <link rel="stylesheet" href="css/product.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/uiSet.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/uiSet.css">
 </head>
 <body>
     <!-- 許瑀芹 -->
