--- a/html/about.html
+++ b/html/about.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
     <!-- css reset -->
-    <link rel="stylesheet" href="../assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <!-- OwlCarousel -->
-    <link rel="stylesheet" href="../assets/css/owl/owl.carousel.min.css">
-    <link rel="stylesheet" href="../assets/css/owl/owl.theme.default.min.css">
+    <link rel="stylesheet" href="assets/css/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/css/owl/owl.theme.default.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <!-- 共用css -->
-    <link rel="stylesheet" href="../assets/css/uiSet.css">
-    <link rel="stylesheet" href="../assets/css/headerNormal.css">
-    <link rel="stylesheet" href="../assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/uiSet.css">
+    <link rel="stylesheet" href="assets/css/headerNormal.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
     <!-- about.css -->
-    <link rel="stylesheet" href="../assets/css/about.css">
+    <link rel="stylesheet" href="assets/css/about.css">
 </head>
 <body>
     <!-- 關於我們_頁首區域 -->
@@ -145,11 +145,11 @@
                     </div>
                     <div class="pageContent">
                         <div class="pic">
-                            <img src="../assets/image/test_01.jpg" alt="">
+                            <img src="assets/image/test_01.jpg" alt="">
                             <h2 class="pageContentTitle">ABOUT</h2>
                         </div>
                         <div class="pageContentTxtBottom">
-                            <img src="../assets/image/home_header_logo.png" alt="logo">
+                            <img src="assets/image/home_header_logo.png" alt="logo">
                             <p>藝起成立於2022年，為虛構網站。<br>本網站為緯育Tibame前端設計工程師班專題作業，本平台僅供學習、展示之用。</p>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                     <hr>
                     <div class="pageContent">
                         <div class="pic">
-                            <img src="../assets/image/test_02.jpg" alt="">
+                            <img src="assets/image/test_02.jpg" alt="">
                         </div>
                         <p>致力於提供各式創作藝術者一個展示作品的環境，建構享受潮流藝術的視覺饗宴，提倡藝術潮流的鑑賞；期待在藝術與收益之中取得平衡，媒合消費者與創作者，打造安全、安心、透明的交易平台，並持續推廣藝術創作。</p>
                     </div>
@@ -177,13 +177,13 @@
 
 
     <!-- Jquery.js -->
-    <script src="../js/jquery/jquery.js"></script>
+    <script src="js/jquery/jquery.js"></script>
     <!-- OwlCarousel -->
-    <script src="../js/owl/owl.carousel.js"></script>
-    <script src="../js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/owl.carousel.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
     <!-- vanilla-tilt.js -->
-    <script type="text/javascript" src="../js/vanilla-tilt/vanilla-tilt.js"></script>
+    <script type="text/javascript" src="js/vanilla-tilt/vanilla-tilt.js"></script>
     <!-- about.js -->
-    <script src="../js/about.js"></script>
+    <script src="js/about.js"></script>
 </body>
 </html>
