--- a/listing.html
+++ b/listing.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="vue.js/vue.js"></script>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/uiSet.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/uiSet.css">
     <link rel="stylesheet" href="assets/css/listing1.css">
     <script src="vue.js/vue.js"></script>
     <script src="//code.jquery.com/jquery-3.3.1.js"></script>
