--- a/about.html
+++ b/about.html
@@ -14,20 +14,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <!-- 共用css -->
     <link rel="stylesheet" href="assets/css/uiSet.css">
-    <link rel="stylesheet" href="assets/css/headerNormal.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
     <!-- about.css -->
-    <link rel="stylesheet" href="assets/css/about.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- 關於我們_頁首區域 -->
     
-<<<<<<< HEAD
-<link rel="stylesheet" href="../../asset/css/reset.css">
-<link rel="stylesheet" href="../../asset/css/uiSet.css">
-<link rel="stylesheet" href="../../asset/css/header.css">
-=======
->>>>>>> CWJyuns
 <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="js/header.js"></script>
@@ -37,11 +29,7 @@
             <section class="logoContain">
                 <section class="logo">
                     <a href="">
-<<<<<<< HEAD
-                        <img src="../../assets/image/home_header_logo.png">
-=======
                         <img src="assets/image/home_header_logo.png">
->>>>>>> CWJyuns
                     </a>
                 </section>
             </section>
@@ -79,20 +67,12 @@
                         <section class="memberList">
                             <section class="icon">
                                 <a href="">
-<<<<<<< HEAD
-                                    <img src="../../assets/image/home_header_iconBell.png">
-=======
                                     <img src="assets/image/home_header_iconBell.png">
->>>>>>> CWJyuns
                                 </a>
                             </section>
                             <section class="icon">
                                 <a href="">
-<<<<<<< HEAD
-                                    <img src="../../assets/image/home_header_iconMember.png">
-=======
                                     <img src="assets/image/home_header_iconMember.png">
->>>>>>> CWJyuns
                                 </a>
                             </section>
                         </section>
