--- a/html/about.html
+++ b/html/about.html
@@ -14,10 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <!-- 共用css -->
     <link rel="stylesheet" href="assets/css/uiSet.css">
-    <link rel="stylesheet" href="assets/css/headerNormal.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
     <!-- about.css -->
-    <link rel="stylesheet" href="assets/css/about.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- 關於我們_頁首區域 -->
